# apple-calendar-mcp

./: .gitignore  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: merge-and-status.md
.claude/skills/release/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-hygiene.yml  release.yml  test.yml
docs/research/: calendar-api-gap-analysis.md  competitive-analysis.md
docs/reviews/: api-critic-review.md  post-streamline-eval-review.md
evals/agent_tool_usability/: create_event_eval.md  create_events_eval.md  delete_events_eval.md  get_calendars_eval.md  get_events_eval.md  run_eval.py  scenarios.py  server_instructions.md  tool_descriptions.md  update_event_eval.md
evals/agent_tool_usability/results/: raw_anthropic_claude-sonnet-4-6.json  raw_anthropic_claude-sonnet-4.json  raw_deepseek_deepseek-chat-v3-0324.json  raw_meta-llama_llama-3.3-70b-instruct.json  raw_mistralai_mistral-large-2411.json  raw_qwen_qwen-2.5-72b-instruct.json  scored_results.md
scripts/: benchmark_performance.sh  check_changelog_date.sh  check_client_server_parity.sh  check_complexity.sh  check_dependencies.sh  check_version_sync.sh  create_tag.sh  install-git-hooks.sh  test_setup.sh  test_teardown.sh
scripts/git-hooks/: pre-push  pre-tag
src/apple_calendar_mcp/: __init__.py  calendar_connector.py  server_fastmcp.py
src/apple_calendar_mcp/swift/: create_calendar.swift  create_event.swift  create_events.swift  delete_calendar.swift  delete_events.swift  get_calendars.swift  get_events.swift  update_event.swift  update_events.swift
tests/benchmarks/: performance.py
tests/e2e/: conftest.py  test_mcp_protocol.py  test_server_tools.py
tests/helpers/: calendar_setup.py
tests/integration/: conftest.py  test_integration.py
tests/unit/: test_calendar_connector.py  test_server.py
