[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-calendar-mcp"
version = "0.7.0"
description = "MCP server for Apple Calendar integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Morgan Jeffries"}]
keywords = ["mcp", "apple-calendar", "calendar", "eventkit", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "fastmcp>=2.12.0",
]

[project.urls]
Repository = "https://github.com/s-morgan-jeffries/apple-calendar-mcp"
"Bug Tracker" = "https://github.com/s-morgan-jeffries/apple-calendar-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "radon>=6.0.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
apple-calendar-mcp = "apple_calendar_mcp.server_fastmcp:mcp.run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: mark test as an async test",
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["apple_calendar_mcp"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = ["if __name__ == \"__main__\""]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv"]
pythonVersion = "3.10"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = "venv"
